--- a/HomeWork26_07_19_2/Views/Shared/_Layout.cshtml
+++ b/HomeWork26_07_19_2/Views/Shared/_Layout.cshtml
@@ -26,13 +26,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">HomeWork26_07_19_2</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Cars</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Cars" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Cars" asp-action="Create">Add</a></li>
                 </ul>
             </div>
         </div>
